--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
+    "node": "^18.20.7",
     "ogl": "^1.0.11",
     "pg": "^8.13.1",
     "react": "^18",
