--- a/package.json
+++ b/package.json
@@ -44,20 +44,23 @@
     "@react-three/fiber": "^8.15.16",
     "@tsparticles/react": "^3.0.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "gsap": "^3.12.7",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "latest",
     "node": "^18.20.7",
     "ogl": "^1.0.11",
-    "pg": "^8.13.1",
+    "pg": "^8.14.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -71,9 +74,11 @@
     "three": "^0.160.1",
     "tsparticles": "^3.8.1",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^22",
     "@types/pg": "^8.11.11",
     "@types/react": "^18",
