--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
     "@tsparticles/react": "^3.0.0",
+    "@vercel/blob": "^0.27.3",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
