--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "react-tsparticles": "^2.12.2",
     "recharts": "latest",
