--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^3.0.4",
     "@tsparticles/react": "^3.0.0",
     "@types/three": "^0.174.0",
     "@vercel/blob": "^0.27.3",
