--- a/package.json
+++ b/package.json
@@ -42,11 +42,9 @@
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.99.5",
     "@react-three/fiber": "^8.15.16",
-    "@react-three/postprocessing": "^3.0.4",
     "@tsparticles/react": "^3.0.0",
     "@types/three": "^0.174.0",
     "@vercel/blob": "^0.27.3",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -87,7 +85,10 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.6",
     "postcss": "^8",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
